data/derived/comb/progs/unify/prog5136.ml.out
Characters 77-78:
  | (h,t) -> if t = true then (f h) else h;;
                                         ^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
